Refactor _functions.scss

--- a/src/styles/abstracts/_functions.scss
+++ b/src/styles/abstracts/_functions.scss
@@ -1,8 +1,13 @@
 @use "sass:math";
 
+// Utils
+
 @function rem($pixels) {
   @if type-of($value: $pixels) != "number" {
     @error "The value #{$pixels} is not a number.";
   }
   @return math.div($pixels / 16px) * 1rem;
 }
+
+// ---
+
