--- a/src/styles/abstracts/_functions.scss
+++ b/src/styles/abstracts/_functions.scss
@@ -6,7 +6,7 @@
   @if type-of($value: $pixels) != "number" {
     @error "The value #{$pixels} is not a number.";
   }
-  @return math.div($pixels / 16px) * 1rem;
+  @return math.div($pixels, 16px) * 1rem;
 }
 
 // ---
