Fix the rem function

--- a/src/styles/abstracts/_functions.scss
+++ b/src/styles/abstracts/_functions.scss
@@ -3,7 +3,7 @@
 // Utils
 
 @function rem($pixels) {
-  @if type-of($value: $pixels) != "number" {
+  @if type-of($pixels) != "number" {
     @error "The value #{$pixels} is not a number.";
   }
   @return math.div($pixels, 16px) * 1rem;
