--- a/src/styles/abstracts/_typography.scss
+++ b/src/styles/abstracts/_typography.scss
@@ -1,30 +1,28 @@
-@use "sass:map";
-
 @use "./functions";
 @use "./design-system-tokens" as tokens;
 
 @mixin _typography-base {
-  font-family: #{map.get(tokens.$font-families, "primary")}, #{map.get(tokens.$font-families, "primary-fallback")};
+  font-family: #{tokens.$ff-primary, tokens.$ff-primary-fallback};
   letter-spacing: 0;
 }
 
 @mixin text-preset-1() {
   @include _typography-base;
-  font-weight: map.get(tokens.$font-weights, "extra-bold");
+  font-weight: tokens.$fw-extra-bold;
   font-size: functions.rem(32px);
   line-height: 1.38;
 }
 
 @mixin text-preset-2() {
   @include _typography-base;
-  font-weight: map.get(tokens.$font-weights, "extra-bold");
+  font-weight: tokens.$fw-extra-bold;
   font-size: functions.rem(24px);
   line-height: 1.38;
 }
 
 @mixin text-preset-3() {
   @include _typography-base;
-  font-weight: map.get(tokens.$font-weights, "extra-bold");
+  font-weight: tokens.$fw-extra-bold;
   font-size: functions.rem(18px);
   line-height: 1.45;
 }
@@ -37,24 +35,24 @@
 
 @mixin text-preset-4-semi-bold() {
   @include _text-preset-4;
-  font-weight: map.get(tokens.$font-weights, "semi-bold");
+  font-weight: tokens.$fw-semi-bold;
 }
 
 @mixin text-preset-4-light() {
   @include _text-preset-4;
-  font-weight: map.get(tokens.$font-weights, "light");
+  font-weight: tokens.$fw-light;
 }
 
 @mixin text-preset-5-regular() {
   @include _typography-base;
-  font-weight: map.get(tokens.$font-weights, "regular");
+  font-weight: tokens.$fw-regular;
   font-size: functions.rem(14px);
   line-height: 1.45;
 }
 
 @mixin text-preset-5-light() {
   @include _typography-base;
-  font-weight: map.get(tokens.$font-weights, "light");
+  font-weight: tokens.$fw-light;
   font-size: functions.rem(14px);
   line-height: 2.25;
 }
@@ -67,15 +65,15 @@
 
 @mixin text-preset-6-semi-bold() {
   @include _text-preset-6;
-  font-weight: map.get(tokens.$font-weights, "semi-bold");
+  font-weight: tokens.$fw-semi-bold;
 }
 
 @mixin text-preset-6-regular() {
   @include _text-preset-6;
-  font-weight: map.get(tokens.$font-weights, "regular");
+  font-weight: tokens.$fw-regular;
 }
 
 @mixin text-preset-6-light() {
   @include _text-preset-6;
-  font-weight: map.get(tokens.$font-weights, "light");
+  font-weight: tokens.$fw-light;
 }
